Saturn moons, responsive images on all pages

--- a/pages/callisto.html
+++ b/pages/callisto.html
@@ -72,14 +72,15 @@ link: callisto
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
                     <p class="paragraph">
-                        Callisto has a low albedo - 20%.
-                        This means that the satellite is more grayish in color.
+                        Callisto has a low albedo of 20%.
+                        This means that the surface is very dark.
                         The icy crust is heavily cratered and provides a record of the moon's lack of geological activity.
                     </p>
                     <p class="paragraph">
-                        The largest and most prominent feature on Callisto is the Valhalla impact basin, which spans about 3,800 kilometers in diameter and is surrounded by a series of concentric rings.
+                        The largest and most prominent feature on Callisto is the Valhalla impact basin, which spans about 1,900 kilometers in diameter and is surrounded by a series of concentric rings.
                         This massive impact structure is the largest multi-ring crater in the Solar System.
-                        Another similar in structure crater is Asgard.
+                        Another similar in structure crater is Asgard, which is 1,400 km in diameter.
+                        Newer impact craters can be distinguished by their brighter appearance, examples of which are Burr and Lofn.
                         In addition to Valhalla, Callisto's surface is covered with numerous smaller craters, many of which are partially filled with ice, giving them a smooth, rounded appearance.
                     </p>
                     <p class="paragraph">
