--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -11,12 +11,12 @@ link: dwarf-planet
                 </p>
                 <p class="paragraph">
                     The number of known dwarf planets is not agreed upon, as there are multiple methods of  measuring  the roundness of objects.
-                    According to the IAU and NASA, there are five confirmed dwarf planets in our solar system: <a href="pluto.html">Pluto</a>, <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a>, <a href="makemake.html">Makemake</a>, and <a href="ceres.html">Ceres</a>.
+                    According to the IAU and NASA, there are five confirmed dwarf planets in our <a href="solar-system.html">Solar System</a>: <a href="pluto.html">Pluto</a>, <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a>, <a href="makemake.html">Makemake</a>, and <a href="ceres.html">Ceres</a>.
                     Other objects considered dwarf planets by some are <a href="gonggong.html">Gonggong</a>, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, <a href="orcus.html">Orcus</a>, <a href="salacia.html">Salacia</a> and many more.
                 </p>
                 <p class="paragraph">
                     Pluto is the biggest dwarf planet.
-                    It was once considered the ninth <a href="planet.html">planet</a> in our solar system, but after the discovery of the similarly sized Eris and many more potentially round bodies, it  was reclassified as a dwarf planet in 2006.
+                    It was once considered the ninth <a href="planet.html">planet</a> in our Solar System, but after the discovery of the similarly sized Eris and many more potentially round bodies, it  was reclassified as a dwarf planet in 2006.
                     Eris, Haumea, Makemake, and Ceres were also subsequently classified as dwarf planets.
                 </p>
                 <p class="paragraph">
@@ -24,7 +24,7 @@ link: dwarf-planet
                     Such bodies are known as <a href="tno.html">trans-Neptunian objects</a>.
                     Most of them are located in an area known as the Kuiper Belt and others are part of other smaller regions, often considered part of the Kuiper belt.
                     Dwarf planet are typically made up of ice and rock and can have <a href="natural-satellite.html">moons</a> of their own.
-                    Many more dwarf planets are yet to be discovered or proven to be such in our solar system and beyond.
+                    Many more dwarf planets are yet to be discovered or proven to be such in our Solar System and beyond.
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
@@ -35,7 +35,7 @@ link: dwarf-planet
                 </p>
                 <p class="paragraph">
                     Pluto was discovered in 1930 by Clyde Tombaugh.
-                    It was considered the ninth planet in our solar system.
+                    It was considered the ninth planet in our Solar System.
                     After the discovery of other bodies beyond Neptune like Eris, the number of planets, if they were recognised as such, could have been as high as a few hundred.
                     For that reason, Pluto was reclassified as a dwarf planet in 2006.
                     Eris itself was discovered in 2005 by a team of astronomers lead by Mike Brown, Chad Trujillo and David Rabinowitz at the Palomar Observatory.
