--- a/pages/earth.html
+++ b/pages/earth.html
@@ -6,8 +6,8 @@ link: earth
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px;">
-                        <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/earth.jpg" alt="Earth">
                         <p class="caption">"The Blue Marble" - Earth seen by Apollo 17</p>
                     </div>
                     <p class="paragraph">
@@ -69,8 +69,8 @@ link: earth
                     They are members of the class Homo, which evolved into the modern-day humans.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/diagrams/seasons-on-earth.png" alt="Equinoxes, Solstices and Seasons" width="320" height="153">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/diagrams/seasons-on-earth.jpg" alt="Equinoxes, Solstices and Seasons">
                         <p class="caption">Equinoxes, Solstices and Seasons</p>
                     </div>
                     <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
@@ -118,12 +118,8 @@ link: earth
                         Just like the oceans, many landforms shape up the land surface - mountains, plateaus, plains, volcanoes and many more.
                     </p>
                     <div class="captionbox center">
-                        <picture>
-                            <source media="(max-width:768px)" srcset="../assets/images/maps/earth-satellite-map-small.png">
-                            <source media="(min-width:768px) and (max-width:1366px)" srcset="../assets/images/maps/earth-satellite-map-medium.png">
-                            <img class="articleimage" src="../assets/images/maps/earth-satellite-map.png" alt="Map of Earth">
-                        </picture>
-                        <p class="caption">True color satellite map of Earth</p>
+                        <img class="articleimage" src="../assets/images/maps/earth-satellite-map.png" alt="Map of Earth">
+                        <p class="caption">True color satellite map of Earth (oceans are filled with a single color)</p>
                     </div>
                 </div>
                 <h3 class="paragraphsubheader" id="Interior">Interior</h3>
@@ -144,8 +140,8 @@ link: earth
                     The core consists of iron and nickel and is responsible for the magnetosphere around Earth.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:104px">
-                        <img class="articleimage" src="../assets/images/diagrams/atmosphere-layers.png" alt="Athmosphere layers" width="102" height="600">
+                    <div class="captionbox right h600">
+                        <img class="articleimage" src="../assets/images/diagrams/atmosphere-layers.png" alt="Athmosphere layers">
                         <p class="caption">Athmospheric layers of Earth</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Atmosphere">Atmosphere</h3>
@@ -196,8 +192,8 @@ link: earth
                     Vapors condenses and precipitates usually in the form of rain, snow, or hail.
                     The water can get into rivers, lakes, oceans, or into groundwater reservoirs, completing the cycle.
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="Moon" width="253" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/moon.jpg" alt="Moon">
                         <p class="caption">The Moon</p>
                     </div>
                     <h2 class="paragraphheader" id="Moon">Moon</h2>
