--- a/pages/enceladus.html
+++ b/pages/enceladus.html
@@ -6,9 +6,9 @@ link: enceladus
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="236" height="240">
-                        <p class="caption">Enceladus as seen by the Cassini orbiter</p>
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus">
+                        <p class="caption">Enceladus as seen in enhanced color by the Cassini orbiter</p>
                     </div>
                     <p class="paragraph">
                         Enceladus is the sixth biggest <a href="natural-satellite.html">moon</a> of <a href="saturn.html">Saturn</a>.
@@ -21,14 +21,14 @@ link: enceladus
                         Many mission were proposed to search for life on Enceladus, but so far none have been approved.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Name">Name</h2>
-                <p class="paragraph">
-                    The name Enceladus comes from the giant in Greek mythology who fough Athena in the Gigantomachy.
-                    John Herschel, son of William Herschel, was the first to suggest naming satellites of Saturn after titans and giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
-                </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     Enceladus was discovered by William Herschel in 1789 with his 40-foot telescope, the biggest at the time.
+                </p>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                    The name Enceladus comes from the giant in Greek mythology who fough Athena in the Gigantomachy.
+                    John Herschel, son of William Herschel, was the first to suggest naming satellites of Saturn after Titans and Giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
@@ -58,11 +58,8 @@ link: enceladus
                 </p>
                 <div class="articlediv">
                     <div class="captionbox center">
-                        <picture>
-                            <source media="(max-width:1200px)" srcset="../assets/images/other/enceladus-plumes-small.png">
-                            <img class="articleimage" src="../assets/images/other/enceladus-plumes.png" alt="Plumes from Enceladus">
-                        </picture>
-                        <p class="caption">Plumes from Enceladus</p>
+                        <img class="articleimage" src="../assets/images/other/enceladus-plumes.png" alt="Plumes from Enceladus">
+                        <p class="caption">Plumes from Enceladus. <a href="https://commons.wikimedia.org/wiki/File:Enceladus_-_November_21_2009_(49728085428).png">Source</a></p>
                     </div>
                     <h3 class="paragraphheader" id="SubsurfaceOcean">Subsurface ocean</h3>
                     <p class="paragraph">
@@ -77,8 +74,8 @@ link: enceladus
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:240px">
-                        <img class="articleimage" src="../assets/images/features/tiger-stripes.jpg" alt="Tiger stripes" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/tiger-stripes.jpg" alt="Tiger stripes">
                         <p class="caption">"Tiger stripes" at the south pole of Enceladus. From left to right - Damascus, Baghdad, Cairo, and Alexandria Sulci.</p>
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
@@ -91,12 +88,13 @@ link: enceladus
                         The most prominent features are the “tiger stripes” - four large, parallel fractures near the south pole, named Alexandria, Cairo, Baghdad, and Damascus Sulci.
                         These fractures have higher temperatures than other parts of the surface and are a major source of the moon’s cryovolcanic plumes.
                         Such rifts suggest that tectonic activity is the major factor that shapes the surface of Enceladus.
-                        Cryovolcanic activity is responsible for the formation of snow on Enceladus, which covers the roch-hard ice surface and feeds the E ring of Saturn.
+                        Cryovolcanic activity is responsible for the formation of snow on Enceladus, which covers the rock-hard ice surface and feeds the E ring of Saturn.
+                        This snow also ends up on some of the other moons, particularly Tethys.
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:240px">
-                        <img class="articleimage" src="../assets/images/features/dunyazad-crater.jpg" alt="Al-Haddar, Shahrazad, and Dunyazad craters" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/dunyazad-crater.jpg" alt="Al-Haddar, Shahrazad, and Dunyazad craters">
                         <p class="caption">From top to bottom - Al Haddar, Shahrazad, and Dunyazad craters. The latter has a domed floor.</p>
                     </div>
                     <p class="paragraph">
@@ -105,8 +103,9 @@ link: enceladus
                         Therse three are among a series of craters, which have domed floors due to viscous relaxation, a process that deforms the craters.
                     </p>
                     <p class="paragraph">
-                        A third type of regions are smooth plains, that are both younger and have less ridges.
+                        A third type of regions are smooth plains, that are both younger and are bounded by ridges.
                         Two such regions are Sarandib and Diyar Planitia.
+                        Voyager images were unable to resolve any craters there, since the very few present are too small.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
