--- a/pages/ganymede.html
+++ b/pages/ganymede.html
@@ -54,21 +54,27 @@ link: ganymede
                     This means that it is larger than the smallest planet - Mercury.
                     Despite this, Mercury is more than twice the mass of Ganymede, due to it's metal-rich internal structure.
                 </p>
-                <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
-                <p class="paragraph">
-                    Ganymede is composed of equal parts rock and ice, similarly to that of <a href="callisto.html">Callisto</a>.
-                    It is also fully differentiated, with an iron-nickel core, a sillicate mantle, an internal liquid water ocean, and a water ice crust.
-                    This gives Ganymede the lowest moment of inertia factor of all the terrestial bodies on the Solar System, or in other words, it is the most differentiated.
-                </p>
-                <p class="paragraph">
-                    There are signs of a liquid ocean beneath the icy surface of Ganymede, potentially the biggest in the entire Solar System.
-                    In fact, Ganymede might have layers of liquid water and ice in different phases, and the lowest layer being a liquid one.
-                    This might be a precursor to the creation of life on Ganymede, which is yet to be confirmed.
-                    The effects of the saltwater ocean on the aurorae in the magnetosphere further confirm its existence. 
-                </p>
-                <p class="paragraph">
-                    Ganymede has a liquid iron-nickel core that provides a magnetosphere.
-                </p>
+                <div class="articlediv">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/harpagia-sulcus.jpg" alt="Harpagia Sulcus">
+                        <p class="caption">The boundary between the dark Nicholson Regio on the left and the bright Harpagia Sulcus on the right.</p>
+                    </div>
+                    <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
+                    <p class="paragraph">
+                        Ganymede is composed of equal parts rock and ice, similarly to that of <a href="callisto.html">Callisto</a>.
+                        It is also fully differentiated, with an iron-nickel core, a sillicate mantle, an internal liquid water ocean, and a water ice crust.
+                        This gives Ganymede the lowest moment of inertia factor of all the terrestial bodies on the Solar System, or in other words, it is the most differentiated.
+                    </p>
+                    <p class="paragraph">
+                        There are signs of a liquid ocean beneath the icy surface of Ganymede, potentially the biggest in the entire Solar System.
+                        In fact, Ganymede might have layers of liquid water and ice in different phases, and the lowest layer being a liquid one.
+                        This might be a precursor to the creation of life on Ganymede, which is yet to be confirmed.
+                        The effects of the saltwater ocean on the aurorae in the magnetosphere further confirm its existence. 
+                    </p>
+                    <p class="paragraph">
+                        Ganymede has a liquid iron-nickel core that provides a magnetosphere.
+                    </p>
+                </div>
                 <div class="articlediv">
                     <div class="captionbox right h240">
                         <img class="articleimage" src="../assets/images/features/tros-crater.png" alt="Tros crater">
