--- a/pages/iapetus.html
+++ b/pages/iapetus.html
@@ -22,16 +22,18 @@ link: iapetus
                         Iapetus has been visited by several missions that have passed Saturn.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Name">Name</h2>
-                <p class="paragraph">
-                    Iapetus is named after one of the Titans in Greek mythology, father of Atlas, Prometheus, Epimetheus, Menoetius, Buphagus, and Anchiale.
-                    John Herschel was the first to suggest naming satellites of Saturn after Titans and Giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
-                </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     Iapetus is the first of the moons that Giovanni Cassini discovered after Christiaan Huygens discovered <a href="titan.html">Titan</a>.
                     In 1671, he observed it for the first time, but for the following months he had difficulties finding it on the other side of the planet.
                     Eventually, he rediscovered it, but much dimmer, concluding that it has two distinctly colored hemispheres.
+                </p>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                    Iapetus is named after one of the Titans in Greek mythology, father of Atlas, Prometheus, Epimetheus, Menoetius, Buphagus, and Anchiale.
+                    Initially, Cassini called the four moons he discovered Sidera Lodoicea ("the stars of Louis") in honour of Louis XIV.
+                    Later, these four, along with Titan, were numbered I through V in order from closest to most distant, and later were updated when  <a href="mimas.html">Mimas</a>, <a href="enceladus.html">Enceladus</a>, and <a href="hyperion.html">Hyperion</a> were discovered.
+                    John Herschel was the first to suggest naming satellites of Saturn after Titans and Giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
