--- a/pages/io.html
+++ b/pages/io.html
@@ -6,8 +6,8 @@ link: io
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io">
                         <p class="caption">Io. Image from Galileo. Enhanced colors.</p>
                     </div>
                     <p class="paragraph">
@@ -67,15 +67,13 @@ link: io
                 </p>
                 <div class="articlediv">
                     <div class="captionbox center">
-                        <picture>
-                            <source media="(max-width:768px)" srcset="../assets/images/maps/io-satellite-map-small.png">
-                            <source media="(min-width:768px) and (max-width:1366px)" srcset="../assets/images/maps/io-satellite-map-middle.png">
-                            <img class="articleimage" src="../assets/images/maps/io-satellite-map.jpg" alt="Map of Io">
-                        </picture>
+                        <img class="articleimage" src="../assets/images/maps/io-satellite-map.jpg" alt="Map of Io">
                         <p class="caption">Enhanced color satellite map of Io</p>
                     </div>
-                    <div class="captionbox right" style="width:242px;">
-                        <img class="articleimage" src="../assets/images/features/pele.jpg" alt="Pele" width="240" height="240">
+                </div>
+                <div class="articlediv">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/pele.jpg" alt="Pele">
                         <p class="caption">Io and the volcano Pele with its reddish ring</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Surface">Surface</h3>
@@ -98,8 +96,8 @@ link: io
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:182px;">
-                        <img class="articleimage" src="../assets/images/other/tvashtar-eruption.gif" alt="Tvashtar eruption" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/other/tvashtar-eruption.gif" alt="Tvashtar eruption">
                         <p class="caption">Timelapse of Tvashtar Patera erupting, seen from New Horizon</p>
                     </div>
                     <h3 class="paragraphheader" id="VolcanicActivity">Volcanic Activity</h3>
