--- a/pages/mars.html
+++ b/pages/mars.html
@@ -6,8 +6,8 @@ link: mars
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/mars.jpg" alt="Mars">
                         <p class="caption">Mars as seen by Rosetta</p>
                     </div>
                     <p class="paragraph">
@@ -82,17 +82,13 @@ link: mars
                 <h3 class="paragraphsubheader" id="Surface">Surface</h3>
                 <div class="articlediv">
                     <div class="captionbox center">
-                        <picture>
-                            <source media="(max-width:768px)" srcset="../assets/images/maps/mars-satellite-map-small.png">
-                            <source media="(min-width:768px) and (max-width:1366px)" srcset="../assets/images/maps/mars-satellite-map-middle.png">
-                            <img class="articleimage" src="../assets/images/maps/mars-satellite-map.jpg" alt="Map of Mars">
-                        </picture>
+                        <img class="articleimage" src="../assets/images/maps/mars-satellite-map.jpg" alt="Map of Mars">
                         <p class="caption">True color satellite map of Mars</p>
                     </div>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:259px">
-                        <img class="articleimage" src="../assets/images/features/olympus-mons.jpg" alt="Olympus Mons" width="257" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/olympus-mons.jpg" alt="Olympus Mons">
                         <p class="caption">Olympus Mons, the tallest mountain on Mars</p>
                     </div>
                     <p class="paragraph">
@@ -201,11 +197,11 @@ link: mars
                         Of the two, Phobos is the one orbiting closer to Mars.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos">
                         </div>
                         <p class="caption">Phobos and Deimos are irregularly-shaped satellites of Mars</p>
                     </div>
@@ -244,8 +240,8 @@ link: mars
                     Phobos 2 managed to reach a Phobos orbit, before it lost communications and failed to deploy a lander and a rover.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:322px">
-                        <img class="articleimage" src="../assets/images/spacecrafts/perseverance-ingenuity.gif" alt="Perseverance and Ingenuity" width="320" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/spacecrafts/perseverance-ingenuity.gif" alt="Perseverance and Ingenuity">
                         <p class="caption">Mars 2020 mission - the rover Perseverance and the helicopter Ingenuity</p>
                     </div>
                     <h3 class="paragraphheader" id="AfterTheColdWar">After the Cold War</h3>
