--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -61,7 +61,7 @@ link: natural-satellite
                 <div class="articlediv">
                     <h3 class="paragraphsubheader" id="GalileanSatellites">Galilean satellites</h3>
                     <p class="paragraph">
-                        <a href="jupiter.html">Jupiter</a> has four round moons - <a href="moon.html">Ganymede</a>, <a href="moon.html">Callisto</a>, <a href="moon.html">Io</a>, and <a href="moon.html">Europa</a>. 
+                        <a href="jupiter.html">Jupiter</a> has four round moons - <a href="ganymede.html">Ganymede</a>, <a href="callisto.html">Callisto</a>, <a href="io.html">Io</a>, and <a href="europa.html">Europa</a>. 
                         They were discovered by Galileo Galilei in 1610. 
                         Ganymede is the largest known satellite and is bigger than <a href="mercury.html">Mercury</a>. 
                         Of the four, Europa is the only one that is smaller than Earth's Moon. 
@@ -193,7 +193,7 @@ link: natural-satellite
                     </div>
                     <h2 class="paragraphheader" id="SatellitesOfDwarfPlanets">Satellites of dwarf planets</h2>
                     <p class="paragraph">
-                        Pluto has five satellites - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos and Styx. 
+                        <a href="pluto.html">Pluto</a> has five satellites - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos and Styx. 
                         Names originate from Greek mythology and are related to the underworld. 
                         The biggest moon - Charon, named after the ferryman of the underworld, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
