--- a/pages/satellites-of-saturn.html
+++ b/pages/satellites-of-saturn.html
@@ -35,7 +35,7 @@ link: satellites-of-saturn
                 <h2 class="paragraphheader" id="Names">Names</h2>
                 <p class="paragraph">
                     Moons of Saturn are named after Titans, Giants, and other characters from Greek mythology.
-                    John Herschel, son of William Herschel, was the first to suggest naming satellites of Saturn after titans and giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
+                    John Herschel, son of William Herschel, was the first to suggest naming satellites of Saturn after Titans and Giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
                     The irregular moons are named after Celtic and Inuit gods, and Norse ice giants, depending on the group they are part of (with the exception of Phoebe, which was named before the convention.)
                 </p>
                 <h2 class="paragraphheader" id="Groups">Groups</h2>
@@ -49,7 +49,7 @@ link: satellites-of-saturn
                     </div>
                     <h3 class="paragraphheader" id="SmallRegularMoons">Small regular moons</h3>
                     <p class="paragraph">
-                        There are 17 other regular moons of Saturn - their orbits are nearly circular and have low inclinations.
+                        Apart from the seven major moons, there are 17 other regular satellites of Saturn - their orbits are nearly circular and have low inclinations.
                         The innermost moon (provisional name S/2009 S 1) is the smallest known Saturnian satellite and orbits near the B ring.
                         The next eight moons - Pan, Daphnis, Atlas, Prometheus, Pandora, Epimetheus, Janus, and Aegaon are all within the orbit of Mimas.
                         All but Atlas, Pandora, and Aegaon are shepherd moons, even though Atlas has an equatorial ridge.
