--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -90,8 +90,8 @@ link: solar-system
                     <p class="readmore">Main article: <a href="asteroid-belt.html">Asteroid belt</a></p>
                     <p class="paragraph">
                         The asteroid belt is a region located between the orbits of Mars and Jupiter filled with millions of rocky bodies called asteroids.
-                        These range in size from Ceres, the largest asteroid and a dwarf planet, to small rocks.
-                        Other large asteroids include Vesta, <a href="pallas.html">Pallas</a>, and <a href="hygiea.html">Hygiea</a>.
+                        These range in size from <a href="ceres.html">Ceres</a>, the largest asteroid and a dwarf planet, to small rocks.
+                        Other large asteroids include <a href="vesta.html">Vesta</a>, <a href="pallas.html">Pallas</a>, and <a href="hygiea.html">Hygiea</a>.
                         The belt is thought to be a remnant of the early Solar System, where the gravitational influence of Jupiter prevented the formation of a planet.
                         The asteroids are spread out over a vast area, with hundreds of thousands of kilometers separating most of them.
                     </p>
