--- a/pages/sun.html
+++ b/pages/sun.html
@@ -6,8 +6,8 @@ link: sun
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/stars/sun.jpg" alt="Sun">
                         <p class="caption">The Sun is a G-type star</p>
                     </div>
                     <p class="paragraph">
