--- a/pages/titan.html
+++ b/pages/titan.html
@@ -23,16 +23,16 @@ link: titan
                         The future mission Dragonfly will make a return to Titan in 2028 and will attempt to make a landing and conduct the first powered and fully controlled atmospheric flight on a natural satellite.
                     </p>
                 </div>
-                <h2 class="paragraphheader" id="Name">Name</h2>
-                <p class="paragraph">
-                    Titan is named after the predecessors to the Olympian gods in Greek mythology.
-                    John Herschel, son of William Herschel, was the first to suggest naming satellites of Saturn after titans and giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
-                    Before that, it was refered to as "moon of Saturn" by Christiaan Huygens, who discovered the moon,
-                </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
                     Inspired by Galileo's discovery of the <a href="satellites-of-jupiter.html">moons of Jupiter</a>, Christiaan Huygens constructed his own telescope with a greater magnification.
                     He discovered Titan in 1655 and later published his observations of Saturn in his Systema Saturnium.
+                </p>
+                <h2 class="paragraphheader" id="Name">Name</h2>
+                <p class="paragraph">
+                    Titan is named after the predecessors to the Olympian gods in Greek mythology.
+                    John Herschel was the first to suggest naming satellites of Saturn after Titans and Giants, since Cronus (Greek analogue of the Roman Saturn) is their leader.
+                    Before that, it was refered to as "moon of Saturn" by Christiaan Huygens, who discovered the moon,
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
