--- a/pages/venus.html
+++ b/pages/venus.html
@@ -6,8 +6,8 @@ link: venus
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/planets/venus.jpg" alt="Venus">
                         <p class="caption">Venus, seen by Mariner 10</p>
                     </div>
                     <p class="paragraph">
@@ -33,8 +33,8 @@ link: venus
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:322px;">
-                        <img class="articleimage" src="../assets/images/other/venus-sky.jpg" alt="Venus as an evening star" width="320" height="213">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/other/venus-sky.jpg" alt="Venus as an evening star">
                         <p class="caption">Venus as an evening star (center right). Jupiter is seen in the top. <a href="https://commons.wikimedia.org/wiki/File:Venus_with_reflection.jpg">Source</a></p>
                     </div>
                     <h2 class="paragraphheader" id="Name">Name</h2>
@@ -103,11 +103,7 @@ link: venus
                         Aphrodita Terra, Ishtar Terra, Beta Regio, Phoebe Regio and Alpha Regio are some of the regions where most tesserae are located.
                     </p>
                     <div class="captionbox center">
-                        <picture>
-                            <source media="(max-width:1200px)" srcset="../assets/images/maps/venus-topography-map-small.png">
-                            <source media="(min-width:1200px) and (max-width:1680px)" srcset="../assets/images/maps/venus-topography-map-medium.png">
-                            <img class="articleimage" src="../assets/images/maps/venus-topography-map.png" alt="Venus topographic map">
-                        </picture>
+                        <img class="articleimage" src="../assets/images/maps/venus-topography-map.png" alt="Venus topographic map">
                         <p class="caption">Topographic map of Venus, Magellan</p>
                     </div>
                 </div>
@@ -130,8 +126,8 @@ link: venus
                     The Maya based their calendar partially on Venus.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/diagrams/venus-phases.png" alt="Venus phases" width="320" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/diagrams/venus-phases.png" alt="Venus phases">
                         <p class="caption">Venus displays phases similar to the Moon</p>
                     </div>
                     <p class="paragraph">
@@ -156,10 +152,7 @@ link: venus
                         Future NASA missions VERITAS and DAVINCI+ are planned to visit the planet.
                     </p>
                     <div class="captionbox center">
-                        <picture>
-                            <source media="(max-width:680px)" srcset="../assets/images/other/venera-13-color-panorama-small.png">
-                            <img class="articleimage" src="../assets/images/other/venera-13-color-panorama.png" alt="Venera 13 color panorama">
-                        </picture>
+                        <img class="articleimage" src="../assets/images/other/venera-13-color-panorama.png" alt="Venera 13 color panorama">
                         <p class="caption">Venera 13 color panorama</p>
                     </div>
                 </div>
