--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -6,8 +6,8 @@ link: pluto
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/tnos/pluto.jpg" alt="Pluto">
                         <p class="caption">Pluto as seen by New Horizons</p>
                     </div>
                     <p class="paragraph">
@@ -100,11 +100,7 @@ link: pluto
                 </p>
                 <div class="articlediv">
                     <div class="captionbox center">
-                        <picture>
-                            <source media="(max-width:768px)" srcset="../assets/images/maps/pluto-satellite-map-small.png">
-                            <source media="(min-width:768px) and (max-width:1366px)" srcset="../assets/images/maps/pluto-satellite-map-middle.png">
-                            <img class="articleimage" src="../assets/images/maps/pluto-satellite-map.jpg" alt="Map of Pluto">
-                        </picture>
+                        <img class="articleimage" src="../assets/images/maps/pluto-satellite-map.jpg" alt="Map of Pluto">
                         <p class="caption">Enhanced color satellite map of Pluto (incomplete)</p>
                     </div>
                     <p class="paragraph">
@@ -137,8 +133,8 @@ link: pluto
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/charon.jpg" alt="Charon">
                         <p class="caption">Charon, the largest Plutonian satellite</p>
                     </div>
                     <h2 class="paragraphheader" id="Satellites">Satellites</h2>
@@ -165,8 +161,8 @@ link: pluto
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/spacecrafts/new-horizons.png" alt="New Horizons" width="257" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/spacecrafts/new-horizons.png" alt="New Horizons">
                         <p class="caption">The New Horizons spacecraft</p>
                     </div>
                     <h2 class="paragraphheader" id="Exploration">Exploration</h2>
