--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -6,8 +6,8 @@ link: saturn
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn" width="320" height="164">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn">
                         <p class="caption">Saturn, seen by the Cassini orbiter</p>
                     </div>
                     <p class="paragraph">
@@ -65,9 +65,10 @@ link: saturn
                     It is suggested that diamond rains occur in the interior of giants, including Saturn.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:194px;">
-                        <video class="articlevideo" width="192" height="192" controls>
+                    <div class="captionbox right h180">
+                        <video class="articlevideo" controls>
                             <source src="../assets/videos/saturn-hexagon.ogg" type="video/ogg">
+                            <source src="../assets/videos/saturn-hexagon.webm" type="video/webm">
                             Video is not supported for your browser.
                         </video>
                         <p class="caption">A hexagonal cloud at the north pole of Saturn</p>
@@ -88,11 +89,8 @@ link: saturn
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <picture>
-                            <source media="(max-width:1200px)" srcset="../assets/images/other/saturn-rings-small.png">
-                            <img class="articleimage" src="../assets/images/other/saturn-rings.png" alt="Rings of Saturn">
-                        </picture>
+                    <div class="captionbox right h300">
+                        <img class="articleimage" src="../assets/images/other/saturn-rings.png" alt="Rings of Saturn">
                         <p class="caption">Rings of Saturn, seen by the Cassini orbiter</p>
                     </div>
                     <h3 class="paragraphsubheader" id="RingSystem">Ring system</h3>
@@ -119,8 +117,8 @@ link: saturn
                     The 250 known irregular moons receie names of Celtic and Inuit gods, and Norse ice giants (with the exception of <a href="phoebe.html">Phoebe</a>.)
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan">
                         <p class="caption">Titan</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Titan">Titan</h3>
@@ -134,8 +132,8 @@ link: saturn
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea" width="180.75" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea">
                         <p class="caption">Rhea</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Rhea">Rhea</h3>
@@ -148,8 +146,8 @@ link: saturn
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus">
                         <p class="caption">Iapetus</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Iapetus">Iapetus</h3>
@@ -161,8 +159,8 @@ link: saturn
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione">
                         <p class="caption">Dione</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Dione">Dione</h3>
@@ -174,8 +172,8 @@ link: saturn
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys">
                         <p class="caption">Tethys</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Tethys">Tethys</h3>
@@ -187,8 +185,8 @@ link: saturn
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="179" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus">
                         <p class="caption">Enceladus</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Enceladus">Enceladus</h3>
@@ -202,8 +200,8 @@ link: saturn
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas">
                         <p class="caption">Mimas</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Mimas">Mimas</h3>
